--- a/templates/admin.html
+++ b/templates/admin.html
@@ -356,15 +356,15 @@
                                 
                                             <div class="form-group">
                                                 <label>Engine size</label>
-                                                <input type="text" name="engine_size" class="form-control" required>
+                                                <input type="text" name="engine_size" placeholder="eg:2.1,4.0," class="form-control" required>
                                             </div>
                                             <div class="form-group">
                                                 <label>Insurance date</label>
-                                                <input type="text" name="insurance_date" class="form-control" required>
+                                                <input type="text" name="insurance_date" placeholder="eg:29-08-2001" class="form-control" required>
                                             </div>
                                             <div class="form-group">
                                                 <label>Location</label>
-                                                <input type="text" name="location" class="form-control" required>
+                                                <input type="text" name="location" placeholder="eg:kalamassery,edapally"  class="form-control" required>
                                             </div>
 
 
@@ -373,11 +373,11 @@
 
                                             <div class="form-group">
                                                 <label>Model</label>
-                                                <input type="text" name="model" class="form-control" required>
+                                                <input type="text" name="model" placeholder="eg:330i,3series"  class="form-control" required>
                                             </div>
                                             <div class="form-group">
                                                 <label>Year</label>
-                                                <input type="number" name="year" class="form-control" required>
+                                                <input type="number" name="year" placeholder="eg:29-8-2001" class="form-control" required>
                                             </div>
                                             <div class="form-group">
                                                 <label>Color</label>
@@ -385,19 +385,19 @@
                                             </div>
                                             <div class="form-group">
                                                 <label>Variant</label>
-                                                <input type="text" name="variant" class="form-control" required>
+                                                <input type="text" name="variant" placeholder="eg:E220d"  class="form-control" required>
                                             </div>
                                             <div class="form-group">
                                                 <label>Kms</label>
-                                                <input type="number" name="kms" class="form-control" required>
+                                                <input type="number" name="kms" placeholder="eg:5000"  class="form-control" required>
                                             </div>
                                             <div class="form-group">
                                                 <label>Ownership</label>
-                                                <input type="number" name="ownership" class="form-control" required>
+                                                <input type="number" name="ownership" placeholder="eg:1,2"  class="form-control" required>
                                             </div>
                                             <div class="form-group">
                                                 <label>Transmission</label>
-                                                <input type="text" name="transmission" class="form-control" required>
+                                                <input type="text" name="transmission" placeholder="eg:auto,manual"  class="form-control" required>
                                             </div>
                                             <div class="form-group">
                                                 <label>Price</label>
@@ -426,7 +426,7 @@
                                                 <label>Banner image</label>
                                                 <input type="file" name="bannerimage" accept="image/*" required>
                                                 <a href="https://www.remove.bg/upload" target="blank">
-                                                    <p><strong>Click here to remove background<strong></p>
+                                                    <p><strong> Dont forget to click here Click here to remove background<strong></p>
                                                 </a>
 
                                             </div>
