--- a/templates/edit.html
+++ b/templates/edit.html
@@ -364,7 +364,7 @@
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label for="inputZip">Kms</label>
-                                             <input type="number" name="variant" value="{{.Car.Kms}}" class="form-control" id="inputZip">
+                                             <input type="number" name="kms" value="{{.Car.Kms}}" class="form-control" id="inputZip">
                                        </div>
                                     </div>
                                 </div>
@@ -400,6 +400,15 @@
                                        
                                     </div>
                                 </div>
+                                <div class="col-4">
+                                    <div class="form-group">
+                                        <label>Price</label>
+                                        <input type="text" name="price" value="{{.Car.Price}}"
+                                            class="form-control" required>
+                                       
+                                    </div>
+                                </div>
+
 
 
 
